[tool.poetry]
name = "ansible-awx"
version = "0.1.0"
description = ""
authors = ["ATTY Lionel <lionel.atty@365talents.com>"]

[tool.poetry.dependencies]
python = "^3.6"
poetry = "^1.1.3"
ansible = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
